# lamia_shared

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  regenerate.sh  setup.py
common/: error.go  util.go
go/common/: common.go  config.go  err.go
go/log/: console_logger.go  fields.go
go/proto/auth/: auth.pb.go
go/proto/shop/: shop.pb.go
go/protos/auth/: auth.pb.go  auth_grpc.pb.go
go/shared_common/: common.go  err.go
lamia_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lamia_shared/common/: config.py
lamia_shared/log/: logger.py
lamia_shared/proto/auth/: auth_pb2_grpc.py
lamia_shared/proto/shop/: shop_pb2.py  shop_pb2_grpc.py
log/: logger.go
proto/auth/: auth.pb.go
proto/shop/: shop.proto
protos/auth/: auth.proto
services/: config.go
services/auth/: auth.pb.go  auth.proto  auth_pb2.py  auth_pb2_grpc.py
services/auth/proto/: auth.pb.go  auth.proto
services/shop/proto/: shop.pb.go  shop.proto
